# itmo-se-cpp-lab5-17bitarray

./: .gitignore  CMakeLists.txt  README.md
lib/: 3DArray.cpp  3DArray.h  CMakeLists.txt
tests/: 3DArrayTests.cpp  CMakeLists.txt
